composable-views/src/shapes/snapshots/composable_views__shapes__rounded__continuous.snap
---
source: composable-views/src/shapes/rounded.rs
expression: output.into_inner()
---
<svg height="128" viewBox="0 0 256 128" width="256" xmlns="http://www.w3.org/2000/svg">
<path d="M0,43.492508 C0,0,0,0,43.492508,0 L180.50749,0 C224,0,224,0,224,43.492508 L224,68.50749 C224,112,224,112,180.50749,112 L43.492508,112 C0,112,0,112,0,68.50749 z" fill="#000000ff" transform="matrix(1 0 0 1 16 16)"/>
</svg>
